# shuttle-aws-templates

./: README.md
s3/: Cargo.toml
s3/src/: bucket.rs  error.rs  main.rs  router.rs
