[package]
name = "shuttle-aws-ex1"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-aws-config = { git = "https://github.com/joshua-mo-143/shuttle-aws-config.git", branch = "main"}
aws-sdk-s3 = "1.12.0"
axum = { version = "0.7.3", features = ["multipart"] }
shuttle-axum = "0.36.0"
shuttle-runtime = "0.36.0"
tokio = "1.28.2"
tracing = "0.1.40"
